# korean-news-collector

./: .env.example  .gitignore  README.md  install.bat  pyproject.toml
src/knews/: __init__.py  __main__.py  clean.py  cli.py  extract.py  output.py  search.py
tests/: test_clean.py  test_extract.py
